modern german and ohg

--- a/thesis.tex
+++ b/thesis.tex
@@ -38,16 +38,16 @@
 
 \include{introduction}
 
-\part{The case facts}\label{part:complexity}
+\part{The case facts}\label{part:case-facts}
 \include{recurring-pattern}
 \include{case-decomposition}
 
-\part{The variation}\label{part:direction}
+\part{The variation}\label{part:variation}
 \include{two-attested-patterns}
 \include{excluding-the-third-pattern}
-\include{going-into-detail}
 
-\part{Stuff}\label{part:stuff}
+\part{Going into detail}\label{part:details}
+\include{going-into-detail}
 \include{stuff}
 
 \bookmarksetup{startatroot}
@@ -55,8 +55,6 @@
 
 %%%%%
 \backmatter
-
-\include{appendix}
 
 \clearpage
 \chapter*{Primary texts}
