--- a/two-attested-patterns.tex
+++ b/two-attested-patterns.tex
@@ -4,6 +4,8 @@
 
 In Part X of this dissertation, I discussed a first aspect of case competition in headless relatives. When there is case competition, reference is always made to the same case scale: there is a fixed order that determines which case wins. The same case scale is used crosslinguistically.
 
+\ex. \ac{nom} < \ac{acc} < \ac{dat}\label{ex:case-scale-two-patterns}
+
 However, there is a second aspect to headless relatives, which differs across languages. This has to do with whether case competition takes place in the first place. Languages differ in whether they allow the internal case or the external case to win the case competition. Logically speaking, there are three patterns possible for languages that show case competition.\footnote{
 In this stage, I do not discuss languages that do not allow internal or external case to win the case competition, because they do not show case competition. In Section X I come back to this kind of language.
 }
@@ -12,7 +14,7 @@ The first possibility is that a language allows both the internal and the extern
 The second possibility is that a language allows the internal case to win the case competition, but it does not allow the external case to. In this type of language, only the internal case gets to surface if it is more to the right on the case scale. If the external case is more to the right on the case scale, it does not surface. In fact, there is no grammatical result possible.
 The third possibility is that a language allows the external case to win the case competition, but it does not allow the internal case to. In this type of language, only the external case gets to surface if it is more to the right on the case scale. If the internal case is more to the right on the case scale, it does not surface, and no grammatical result is possible.
 
-In this chapter I show that two of these three patterns are attested crosslinguistically. The first pattern, in which both internal and external case can win, is the one already exemplified by Gothic. I show that there is another language that shows the same pattern: Old High German. The second pattern, in which only the internal case wins, is exemplified by Modern German. There is no language in which only the external case wins the case competition. A summary of the patterns is given in \ref{tbl:int-ext-summary}.
+In this chapter I show that two of these three patterns are attested crosslinguistically. The first pattern, in which both internal and external case can win, is the one already exemplified by Gothic. I show that there is another language that shows the same pattern: Old High German. The second pattern, in which only the internal case wins, is exemplified by Modern German. There is no language in which only the external case wins the case competition. A summary of the patterns is given in Table \ref{tbl:competition-summary}.
 
 \begin{table}[H]
  \center
@@ -25,7 +27,7 @@ In this chapter I show that two of these three patterns are attested crosslingui
   \ac{mg}           & ✔                  & *                 \\
   n.a.              & *                  & ✔                 \\
   \bottomrule
-\end{tabular}\label{tbl:int-ext-summary}
+\end{tabular}\label{tbl:competition-summary}
 \end{table}
 
 After I discuss the possible languages that show case competition, I briefly turn to some that do not.
@@ -35,7 +37,9 @@ Two other examples are Old English and Greek, which always let their relative pr
 
 \section{Internal or external wins}
 
-\subsection{Gothic}
+The first type of language that is attested is the one that allows both the internal case and the external case to win the case competition. In this section I give a summary of the findings in Gothic \citep{harbert1978}, repeated from Chapter \ref{ch:recurring}. I also discuss data from Old High German, which is the result of my own research.
+
+As discussed in Chapter \ref{ch:recurring}, Gothic is a language in case competition in headless relatives adheres to the case scale in \ref{ex:case-scale-two-patterns}. In Gothic it does not matter whether the more complex case is the internal case or the external case.
 
 \begin{table}[H]
   \center
@@ -44,9 +48,6 @@ Two other examples are Old English and Greek, which always let their relative pr
     \label{tbl:summary-gothic-repeated}
 \end{table}
 
-
-\subsection{Old High German}
-
 % Old High German is widely discussed in the literature because of its case attraction (references).
 %
 % \ex. example case attraction
@@ -54,9 +55,15 @@ Two other examples are Old English and Greek, which always let their relative pr
 % by extension, examples with external case surfacing in headless relatives are also discussed
 % to the best of my knowledge, there is no systematic study of direction: int to ext or ext to int
 
+% The description of Gothic is mostly based on \citep{harbert1978}. The spelling of the examples follows the Wulfila Project website.\footnote{
+% <http://www.wulfila.be>
+% } The glossing comes from the detailed tagging on that same website. The translations are my own.
+
 Old High German shows the same pattern as Gothic. The relative pronoun can surface in the internal or the external case, depending on which case is more to the right on the case scale. This conclusion follows from my own research of the texts Der althochdeutsche Isidor, The Monsee fragments, Otfrid's Evangelienbuch and Tatian in ANNIS3.\footnote{
 https://korpling.german.hu-berlin.de/annis3/
 } The examples below follow the spelling and the detailed glosses in ANNIS3. The translations are my own.
+
+I start with the competition between accusative and nominative. Following the case scale, the relative pronoun appears in accusative case and never in nominative.
 
 Consider the example in \ref{ex:ohg-acc-nom}. In this example, the internal case is nominative and the external case is accusative.
 The internal case is nominative. The predicate \tit{gisizzen} `to possess' takes nominative subjects.
@@ -70,59 +77,8 @@ The relative pronoun \tit{dhen} `\ac{rel}.\ac{acc}.\ac{m}.\ac{sg}' appears in th
 `I give rise to from Samuel of Jakob and from Judas him who possesses my mountains.' \flushfill{\ac{ohg}, \ac{isid} 34:3}\label{ex:ohg-acc-nom}\\
 % Lat `Educam de Iacob semine et de Iuda possedentem montes meos.'
 
-Consider the example in \ref{ex:ohg-dat-nom}. In this example, the internal case is nominative and the external case is dative.
-The internal case is nominative. The predicate \tit{sprehhan} `to speak' takes nominative subjects.
-The external case is dative. The predicate \tit{antwurten} `to reply' takes dative objects.
-The relative pronoun \tit{demo} `\ac{rel}.\ac{dat}.\ac{m}.\ac{sg}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
-
-\exg. Enti aer {ant uurta} demo \tbf{zaimo} \tbf{sprah}, quad:\\
-and 3\tsc{sg.m.nom} reply.\tsc{3sg}.\tsc{past}\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{m}.\tsc{sg} {to 3\tsc{sg.m.dat}} speak.\tsc{3sg}.\tsc{past}\scsub{[nom]} say.\tsc{past}.\tsc{3sg}\\
-`And he replied to the one who spoke to him, he said:' \flushfill{\ac{ohg}, \ac{mons} 7:24, adapted from \pgcitealt{pittner1995}{199}}\label{ex:ohg-dat-nom}
-
-Consider the example in \ref{ex:ohg-dat-acc}. In this example, the internal case is accusative and the external case is dative.
-The internal case is nominative. The predicate \tit{zellen} `to report' takes accusative objects.
-The external case is dative. The comparative of the adjective \tit{furiro} `great' takes dative objects.
-The relative pronoun \tit{thên} `\ac{rel}.\ac{dat}.\ac{pl}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
-
-\exg. Bistú nu {zi wáre} furira Ábrahame? Ouh thén \tbf{man} \tbf{hiar} \tbf{nu} \tbf{zálta} joh sie álle tod bifálta?\\
-{be.2\tsc{sg} \tsc{2sg.nom}} now really {great}.\tsc{com}\scsub{[dat]} Abraham.\tsc{dat} and \tsc{rel}.\ac{dat}.\tsc{m}.\tsc{pl} one.\tsc{m.sg.nom} here now report.\tsc{past}.\tsc{3sg}\scsub{[acc]}
-and \tsc{3pl}.\tsc{acc} all.\tsc{3pl}.\tsc{acc} death.\tsc{nom}.\tsc{sg} attack.\tsc{past}.\tsc{3sg}\\
-`Are you now really greater than Abraham? And than those who one reported here now and death attacked them all?' \flushfill{\ac{ohg}, \ac{otfrid} III 18:33}\label{ex:ohg-dat-acc}
-
-Consider the example in \ref{ex:ohg-nom-acc}. In this example, the internal case is accusative and the external case is nominative.
-The internal case is accusative. The predicates \tit{zellen} `to tell' and \tit{slahan} `to kill' takes accusative objects.
-The external case is nominative. The predicate \tit{sin} `to be' takes nominative objects.
-The relative pronoun \tit{then} `\ac{rel}.\ac{acc}.\ac{m}.\ac{sg}' appears in the internal case: the accusative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
-
-\exg. thíz ist \tbf{then} \tbf{sie} \tbf{zéllent} \tbf{joh} \tbf{then} \tbf{sie} \tbf{sláhan} \tbf{wollent}!\\
-this.\tsc{nom} be.3\tsc{sg}\scsub{[nom]} \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} \tsc{3pl}.\tsc{masc}.\tsc{nom} tell.\tsc{3pl}\scsub{[acc]}
-and \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} \tsc{3pl}.\tsc{masc}.\tsc{nom} kill\scsub{[acc]} want.\tsc{3pl}\\
-`This is the one whom they talk about and whom they want to kill.' \flushfill{\ac{ohg}, \ac{otfrid} III 16:50}\label{ex:ohg-nom-acc}
-
-Consider the example in \ref{ex:ohg-nom-dat}. In this example, the internal case is dative and the external case is nominative.
-The internal case is dative. The predicate \tit{forlazan} `to read' takes dative indirect objects.
-The external case is nominative. The predicate \tit{minnon} `to love' takes nominative subjects.
-The relative pronoun \tit{themo} `\ac{rel}.\ac{dat}.\ac{m}.\ac{sg}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
-
-\exg. \tbf{themo} \tbf{min} \tbf{uuirdit} \tbf{forlazan}, min minnot\\
-\tsc{rel}.\tsc{dat}.\tsc{m}.\tsc{sg} less become.\tsc{3sg} read\scsub{[dat]} less love.\tsc{3sg}\scsub{[nom]}\\
-`To whom less is read, loves less.' \flushfill{\ac{ohg}, \ac{tatian} 138:13}\label{ex:ohg-nom-dat}
-
-Consider the example in \ref{ex:ohg-acc-dat}. In this example, the internal case is dative and the external case is accusative.
-The internal case is dative. The predicate \tit{gituon} `to do' takes dative indirect objects.
-The external case is nominative. The predicate \tit{queman} `to come' takes nominative subjects.
-The relative pronoun \tit{themo} `\ac{rel}.\ac{dat}.\ac{m}.\ac{sg}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
-
-% Previous sentence: \tit{Ther mán sih thaz gilérit,thia gilóuba in ínan kerit --giduat er húgu sinan in éwon filu blídan;}
-% ``the man teaches himself that, he focusses on the belief in himself, he does his own belief forever with a lot of enthusiasm.''
-
-\exg. \tbf{Themo} \tbf{avur} \tbf{tház} \tbf{ni} \tbf{gidúat}, quimit séragaz muat, joh wónot inan úbari gotes ábulgi!\\
-\tsc{rel}.\tsc{dat}.\tsc{m}.\tsc{sg} but \tsc{dem}.\tsc{acc}.\tsc{n}.\tsc{sg} not do.3\tsc{sg}\scsub{[dat?]} come.3\tsc{sg}\scsub{[acc?]} sad.\tsc{nom}.\tsc{sg} heart.\tsc{nom}.\tsc{sg}
-and live.3\tsc{sg} 3.\tsc{sg}.\tsc{m}.\tsc{acc} over god.\tsc{gen}.\tsc{sg} rage.\tsc{sg}\\
-`But he does not do that to him, the sad heart comes him, and he lives in God's rage!' \flushfill{\ac{ohg}, \ac{otfrid} II 3:37}\label{ex:ohg-acc-dat}
-
 There is a counterexample.
-Consider the example in \ref{ex:ohg-counterexample}. In this example, the internal case is nominative and the external case is accusative. Surprisingly, the relative pronoun appears in the case lower on the case scale.
+Consider the example in \ref{ex:ohg-counterexample}. In this example, the internal case is nominative and the external case is accusative. Surprisingly, the relative pronoun appears in the case lower on the case scale: the nominative.
 The internal case is nominative. The predicate \tit{giheilen} `to save' takes nominative subjects.
 The external case is accusative. The predicate \tit{beran} `to bear' takes accusative objects.
 The relative pronoun \tit{thér} `\ac{rel}.\ac{nom}.\ac{m}.\ac{sg}' appears in the internal case: the nominative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
@@ -131,35 +87,126 @@ The relative pronoun \tit{thér} `\ac{rel}.\ac{nom}.\ac{m}.\ac{sg}' appears in t
  that 3\tsc{sg.f.nom} 1\tsc{pl.dat} bear\scsub{[acc]} should.\tsc{subj}.\tsc{past}.\tsc{3sg} \tsc{rel}.\tsc{nom}.\tsc{m}.\tsc{sg} 1\tsc{pl.acc} save.\tsc{subj.past}.\tsc{3sg}\scsub{[nom]}\\
  `that she should bear for us him who will save us' \flushfill{\ac{ohg}, \ac{otfrid} I 3:38}\label{ex:ohg-counterexample}
 
-\phantom{x}
+%this is the only counterexample I have found. it could be there because of jezus.
 
+Consider the example in \ref{ex:ohg-nom-acc}. In this example, the internal case is accusative and the external case is nominative.
+The internal case is accusative. The predicates \tit{zellen} `to tell' and \tit{slahan} `to kill' takes accusative objects.
+The external case is nominative. The predicate \tit{sin} `to be' takes nominative objects.
+The relative pronoun \tit{then} `\ac{rel}.\ac{acc}.\ac{m}.\ac{sg}' appears in the internal case: the accusative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
+Examples in which the internal case is accusative, the external case is nominative and the relative pronoun appears in nominative case are unattested.
+
+\exg. thíz ist \tbf{then} \tbf{sie} \tbf{zéllent} \tbf{joh} \tbf{then} \tbf{sie} \tbf{sláhan} \tbf{wollent}!\\
+this.\tsc{nom} be.3\tsc{sg}\scsub{[nom]} \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} \tsc{3pl}.\tsc{masc}.\tsc{nom} tell.\tsc{3pl}\scsub{[acc]}
+and \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} \tsc{3pl}.\tsc{masc}.\tsc{nom} kill\scsub{[acc]} want.\tsc{3pl}\\
+`This is the one whom they talk about and whom they want to kill.' \flushfill{\ac{ohg}, \ac{otfrid} III 16:50}\label{ex:ohg-nom-acc}
+
+I continue with the competition between dative and nominative. Following the case scale, the relative pronoun appears in dative case and never in nominative.
+
+Consider the example in \ref{ex:ohg-dat-nom}. In this example, the internal case is nominative and the external case is dative.
+The internal case is nominative. The predicate \tit{sprehhan} `to speak' takes nominative subjects.
+The external case is dative. The predicate \tit{antwurten} `to reply' takes dative objects.
+The relative pronoun \tit{demo} `\ac{rel}.\ac{dat}.\ac{m}.\ac{sg}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
+Examples in which the internal case is nominative, the external case is dative and the relative pronoun appears in nominative case are unattested.
+
+\exg. Enti aer {ant uurta} demo \tbf{zaimo} \tbf{sprah}, quad:\\
+and 3\tsc{sg.m.nom} reply.\tsc{3sg}.\tsc{past}\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{m}.\tsc{sg} {to 3\tsc{sg.m.dat}} speak.\tsc{3sg}.\tsc{past}\scsub{[nom]} say.\tsc{past}.\tsc{3sg}\\
+`And he replied to the one who spoke to him, he said:' \flushfill{\ac{ohg}, \ac{mons} 7:24, adapted from \pgcitealt{pittner1995}{199}}\label{ex:ohg-dat-nom}
+
+Consider the example in \ref{ex:ohg-nom-dat}. In this example, the internal case is dative and the external case is nominative.
+The internal case is dative. The predicate \tit{forlazan} `to read' takes dative indirect objects.
+The external case is nominative. The predicate \tit{minnon} `to love' takes nominative subjects.
+The relative pronoun \tit{themo} `\ac{rel}.\ac{dat}.\ac{m}.\ac{sg}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
+Examples in which the internal case is dative, the external case is nominative and the relative pronoun appears in nominative case are unattested.
+
+\exg. \tbf{themo} \tbf{min} \tbf{uuirdit} \tbf{forlazan}, min minnot\\
+\tsc{rel}.\tsc{dat}.\tsc{m}.\tsc{sg} less become.\tsc{3sg} read\scsub{[dat]} less love.\tsc{3sg}\scsub{[nom]}\\
+`To whom less is read, loves less.' \flushfill{\ac{ohg}, \ac{tatian} 138:13}\label{ex:ohg-nom-dat}
+
+I end with the competition between dative and accusative. Following the case scale, the relative pronoun appears in dative case and never in accusative.
+
+Consider the example in \ref{ex:ohg-dat-acc}. In this example, the internal case is accusative and the external case is dative.
+The internal case is nominative. The predicate \tit{zellen} `to report' takes accusative objects.
+The external case is dative. The comparative of the adjective \tit{furiro} `great' takes dative objects.
+The relative pronoun \tit{thên} `\ac{rel}.\ac{dat}.\ac{pl}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
+Examples in which the internal case is accusative, the external case is dative and the relative pronoun appears in accusative case are unattested.
+
+\exg. Bistú nu {zi wáre} furira Ábrahame? Ouh thén \tbf{man} \tbf{hiar} \tbf{nu} \tbf{zálta} joh sie álle tod bifálta?\\
+{be.2\tsc{sg} \tsc{2sg.nom}} now really {great}.\tsc{com}\scsub{[dat]} Abraham.\tsc{dat} and \tsc{rel}.\ac{dat}.\tsc{m}.\tsc{pl} one.\tsc{m.sg.nom} here now report.\tsc{past}.\tsc{3sg}\scsub{[acc]}
+and \tsc{3pl}.\tsc{acc} all.\tsc{3pl}.\tsc{acc} death.\tsc{nom}.\tsc{sg} attack.\tsc{past}.\tsc{3sg}\\
+`Are you now really greater than Abraham? And than those who one reported here now and death attacked them all?' \flushfill{\ac{ohg}, \ac{otfrid} III 18:33}\label{ex:ohg-dat-acc}
+
+Consider the example in \ref{ex:ohg-acc-dat}. In this example, the internal case is dative and the external case is accusative.
+The internal case is dative. The predicate \tit{gituon} `to do' takes dative indirect objects.
+The external case is nominative. The predicate \tit{queman} `to come' takes nominative subjects.
+The relative pronoun \tit{themo} `\ac{rel}.\ac{dat}.\ac{m}.\ac{sg}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
+Examples in which the internal case is dative, the external case is accusative and the relative pronoun appears in accusative case are unattested.
+
+% Previous sentence: \tit{Ther mán sih thaz gilérit,thia gilóuba in ínan kerit --giduat er húgu sinan in éwon filu blídan;}
+% ``the man teaches himself that, he focusses on the belief in himself, he does his own belief forever with a lot of enthusiasm.''
+
+\exg. \tbf{Themo} \tbf{avur} \tbf{tház} \tbf{ni} \tbf{gidúat}, quimit séragaz muat, joh wónot inan úbari gotes ábulgi!\\
+\tsc{rel}.\tsc{dat}.\tsc{m}.\tsc{sg} but \tsc{dem}.\tsc{acc}.\tsc{n}.\tsc{sg} not do.3\tsc{sg}\scsub{[dat?]} come.3\tsc{sg}\scsub{[acc?]} sad.\tsc{nom}.\tsc{sg} heart.\tsc{nom}.\tsc{sg}
+and live.3\tsc{sg} 3.\tsc{sg}.\tsc{m}.\tsc{acc} over god.\tsc{gen}.\tsc{sg} rage.\tsc{sg}\\
+`But he does not do that to him, the sad heart comes him, and he lives in God's rage!' \flushfill{\ac{ohg}, \ac{otfrid} II 3:37}\label{ex:ohg-acc-dat}
+mg
+
+To summarize
+
+\begin{table}[H]
+  \center
+  \caption{Summary Old High German headless relatives}
+  \begin{tabular}{c|c|c|c}
+    \toprule
+        \textsubscript{\tsc{int}} \textsuperscript{\tsc{ext}}
+          & [\ac{nom}]
+          & [\ac{acc}]
+          & [\ac{dat}]
+          \\ \cmidrule{1-4}
+      [\ac{nom}]
+          &
+          & \ac{acc}
+          & \ac{dat}
+          \\ \cmidrule{1-4}
+      [\ac{acc}]
+          & \ac{acc}
+          &
+          & \ac{dat}
+          \\ \cmidrule{1-4}
+      [\ac{dat}]
+          & \ac{dat}
+          & \ac{dat}
+          &
+          \\
+    \bottomrule
+  \end{tabular}
+    \label{tbl:summary-old-high-german}
+\end{table}
+
+In sum, Gothic and Old High German allow both the internal and the external case to surface, as long as they adhere to the case scale.
 
 \section{Only internal case wins}
 
-There is really case competition: see appendix
+Modern German differs from Gothic and Old High German. Just like the two other languages, Modern German adheres to the case scale: the more complex case wins the case competition. However, Modern German only allows the winner of the case competition to surface when it is the internal case. When the external case wins the competition, the result is ungrammatical.
 
+The description of Modern German is mostly based on \citep{vogel2001}.
 
-In \ac{mg}, only internal case can win.
+I start with the competition between accusative and nominative. Following the case scale, the relative pronoun appears in accusative case and never in nominative. Following the internal-only requirement, only if the accusative case is the internal case, the sentence is grammatical.
 
-Internal is grammatical.
-
-Consider the example in \ref{ex:mg-acc-dat}. In this example, the internal case is dative and the external case is accusative.
-The internal case is dative. The predicate \tit{vertrauen} `to trust' takes dative objects.
+Consider the example in \ref{ex:mg-acc-nom}. In this example, the internal case is nominative and the external case is accusative.
+The internal case is nominative. The predicate \tit{sein} `to be' takes nominative subjects.
 The external case is accusative. The predicate \tit{einladen} `to invite' takes accusative objects.
-The relative pronoun \tit{wem} `\tsc{rel}.\ac{dat}.\tsc{an}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
+The relative pronoun \tit{wen} `\tsc{rel}.\ac{acc}.\tsc{an}' appears in the external case: the accusative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
+The example adheres to the case cale, but the more complex case (here the accusative) is not the internal case. As only the internal can win the case competition in Modern German, the example in ungrammatical.
 
-\exg. Ich {lade ein} \tbf{wem} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
-I.\ac{nom} invite.1\tsc{sg}\scsub{[acc]} \tsc{rel}.\ac{dat}.\tsc{an} also Maria.\ac{nom} trust.3\tsc{sg}\scsub{[dat]}.\\
-`I invite whoever Maria also trusts.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat}
+\exg. *Ich {lade ein}, wen \tbf{mir} \tbf{sympathisch} \tbf{ist}.\\
+I.\ac{nom} invite.1\ac{sg}\scsub{[acc]} \tsc{rel}.\ac{acc}.\tsc{an} I.\ac{dat} nice be.3\ac{sg}\scsub{[nom]}\\
+`I invite who I like.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-nom}
 
-Consider the example in \ref{ex:mg-nom-dat}. In this example, the internal case is dative and the external case is nominative.
-The internal case is dative. The predicate \tit{vertrauen} `to trust' takes dative objects.
-The external case is nominative. The predicate \tit{besuchen} `to visit' takes nominative subjects.
-The relative pronoun \tit{wem} `\tsc{rel}.\ac{dat}.\tsc{an}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
+Changing the case of the relative pronoun to the nominative still gives an ungrammatical result, as illustrated in \ref{ex:mg-acc-nom-u}. This in addition violates the case scale.
 
-\exg. Uns besucht \tbf{wem} \tbf{Maria} \tbf{vertraut}.\\
-we.\ac{acc} visit.3\ac{sg}\scsub{[nom]} \tsc{rel}.\ac{dat}.\tsc{an} Maria.\ac{nom} trust.3\ac{sg}\scsub{[dat]}\\
-`Who visits us, Maria trusts.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-dat}
+\exg. *Ich {lade ein}, wer \tbf{mir} \tbf{sympathisch} \tbf{ist}.\\
+I.\ac{nom} invite.1\ac{sg}\scsub{[acc]} \tsc{rel}.\ac{nom}.\tsc{an} I.\ac{dat} nice be.3\ac{sg}\scsub{[nom]}\\
+`I invite who I like.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-nom-u}
 
 Consider the example in \ref{ex:mg-nom-acc}. In this example, the internal case is accusative and the external case is nominative.
 The internal case is accusative. The predicate \tit{mögen} `to like' takes accusative objects.
@@ -170,37 +217,78 @@ The relative pronoun \tit{wen} `\tsc{rel}.\ac{acc}.\tsc{an}' appears in the inte
  we.\ac{acc} visit.3\ac{sg}\scsub{[nom]} \tsc{rel}.\ac{acc}.\tsc{an} Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}\\
  `Who visits us, Maria likes.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-acc}
 
-External is ungrammatical.
+Changing the case of the relative pronoun to the nominative gives an ungrammatical result, as illustrated in \ref{ex:mg-nom-acc-u}. This violates the case scale.
 
-Consider the example in \ref{ex:mg-dat-acc}. In this example, the internal case is accusative and the external case is dative.
-The internal case is accusative. The predicate \tit{mögen} `to like' takes accusative objects.
-The external case is dative. The predicate \tit{vertrauen} `to trust' takes dative objects.
-The relative pronoun \tit{wem} `\tsc{rel}.\ac{dat}.\tsc{an}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
-This is ungrammatical in German: only the internal case can win.
+\exg. *Uns besucht \tbf{wer} \tbf{Maria} \tbf{mag}.\\
+ we.\ac{acc} visit.3\ac{sg}\scsub{[nom]} \tsc{rel}.\ac{nom}.\tsc{an} Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}\\
+ `Who visits us, Maria likes.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-acc-u}
 
-\exg. *Ich vertraue wem \tbf{auch} \tbf{Maria} \tbf{mag}. \\
-I.\ac{nom} trust.1\ac{sg}\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{an} also Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}.\\
-`I trust whoever Maria also likes.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-acc}
+I continue with the competition between dative and nominative. Following the case scale, the relative pronoun appears in dative case and never in nominative. Following the internal-only requirement, only if the dative case is the internal case, the sentence is grammatical.
 
 Consider the example in \ref{ex:mg-dat-nom}. In this example, the internal case is nominative and the external case is dative.
 The internal case is nominative. The predicate \tit{mögen} `to like' takes nominative subjects.
 The external case is dative. The predicate \tit{vertrauen} `to trust' takes dative objects.
 The relative pronoun \tit{wem} `\tsc{rel}.\ac{dat}.\tsc{an}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
-This is ungrammatical in German: only the internal case can win.
+The example adheres to the case cale, but the more complex case (here the dative) is not the internal case. As only the internal can win the case competition in Modern German, the example in ungrammatical.
 
 \exg. *Ich vertraue, wem \tbf{Hitchcock} \tbf{mag}.\\
 I.\ac{nom} trust.1\ac{sg}\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{an} Hitchcock.\ac{acc} like.3\ac{sg}\scsub{[nom]}\\
 `I trust who likes Hitchcock.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-nom}
 
-Consider the example in \ref{ex:mg-acc-nom}. In this example, the internal case is nominative and the external case is accusative.
-The internal case is nominative. The predicate \tit{sein} `to be' takes nominative subjects.
-The external case is accusative. The predicate \tit{einladen} `to invite' takes accusative objects.
-The relative pronoun \tit{wen} `\tsc{rel}.\ac{acc}.\tsc{an}' appears in the external case: the accusative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
-This is ungrammatical in German: only the internal case can win.
+Changing the case of the relative pronoun to the nominative still gives an ungrammatical result, as illustrated in \ref{ex:mg-dat-nom-u}. This in addition violates the case scale.
 
-\exg. *Ich {lade ein}, wen \tbf{mir} \tbf{sympathisch} \tbf{ist}.\\
-I.\ac{nom} invite.1\ac{sg}\scsub{[acc]} \tsc{rel}.\ac{acc}.\tsc{an} I.\ac{dat} nice be.3\ac{sg}\scsub{[nom]}\\
-`I invite who I like.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-nom}
+\exg. *Ich vertraue, wer \tbf{Hitchcock} \tbf{mag}.\\
+I.\ac{nom} trust.1\ac{sg}\scsub{[dat]} \tsc{rel}.\ac{nom}.\tsc{an} Hitchcock.\ac{acc} like.3\ac{sg}\scsub{[nom]}\\
+`I trust who likes Hitchcock.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-nom-u}
+
+Consider the example in \ref{ex:mg-nom-dat}. In this example, the internal case is dative and the external case is nominative.
+The internal case is dative. The predicate \tit{vertrauen} `to trust' takes dative objects.
+The external case is nominative. The predicate \tit{besuchen} `to visit' takes nominative subjects.
+The relative pronoun \tit{wem} `\tsc{rel}.\ac{dat}.\tsc{an}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
+
+\exg. Uns besucht \tbf{wem} \tbf{Maria} \tbf{vertraut}.\\
+we.\ac{acc} visit.3\ac{sg}\scsub{[nom]} \tsc{rel}.\ac{dat}.\tsc{an} Maria.\ac{nom} trust.3\ac{sg}\scsub{[dat]}\\
+`Who visits us, Maria trusts.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-dat}
+
+Changing the case of the relative pronoun to the nominative gives an ungrammatical result, as illustrated in \ref{ex:mg-nom-dat-u}. This violates the case scale.
+
+\exg. *Uns besucht \tbf{wer} \tbf{Maria} \tbf{vertraut}.\\
+we.\ac{acc} visit.3\ac{sg}\scsub{[nom]} \tsc{rel}.\ac{nom}.\tsc{an} Maria.\ac{nom} trust.3\ac{sg}\scsub{[dat]}\\
+`Who visits us, Maria trusts.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-dat-u}
+
+I end with the competition between dative and accusative. Following the case scale, the relative pronoun appears in dative case and never in accusative. Following the internal-only requirement, only if the dative case is the internal case, the sentence is grammatical.
+
+Consider the example in \ref{ex:mg-dat-acc}. In this example, the internal case is accusative and the external case is dative.
+The internal case is accusative. The predicate \tit{mögen} `to like' takes accusative objects.
+The external case is dative. The predicate \tit{vertrauen} `to trust' takes dative objects.
+The relative pronoun \tit{wem} `\tsc{rel}.\ac{dat}.\tsc{an}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
+The example adheres to the case scale, but the more complex case (here the dative) is not the internal case. As only the internal can win the case competition in Modern German, the example in ungrammatical.
+
+\exg. *Ich vertraue wem \tbf{auch} \tbf{Maria} \tbf{mag}. \\
+I.\ac{nom} trust.1\ac{sg}\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{an} also Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}.\\
+`I trust whoever Maria also likes.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-acc}
+
+Changing the case of the relative pronoun to the accusative still gives an ungrammatical result, as illustrated in \ref{ex:mg-dat-acc-u}. This in addition violates the case scale.
+
+\exg. *Ich vertraue wen \tbf{auch} \tbf{Maria} \tbf{mag}. \\
+I.\ac{nom} trust.1\ac{sg}\scsub{[dat]} \tsc{rel}.\ac{acc}.\tsc{an} also Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}.\\
+`I trust whoever Maria also likes.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-acc-u}
+
+Consider the example in \ref{ex:mg-acc-dat}. In this example, the internal case is dative and the external case is accusative.
+The internal case is dative. The predicate \tit{vertrauen} `to trust' takes dative objects.
+The external case is accusative. The predicate \tit{einladen} `to invite' takes accusative objects.
+The relative pronoun \tit{wem} `\tsc{rel}.\ac{dat}.\tsc{an}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
+
+\exg. Ich {lade ein} \tbf{wem} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
+I.\ac{nom} invite.1\tsc{sg}\scsub{[acc]} \tsc{rel}.\ac{dat}.\tsc{an} also Maria.\ac{nom} trust.3\tsc{sg}\scsub{[dat]}.\\
+`I invite whoever Maria also trusts.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat}
+
+Changing the case of the relative pronoun to the accusative gives an ungrammatical result, as illustrated in \ref{ex:mg-acc-dat-u}. This violates the case scale.
+
+\exg. *Ich {lade ein} \tbf{wen} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
+I.\ac{nom} invite.1\tsc{sg}\scsub{[acc]} \tsc{rel}.\ac{acc}.\tsc{an} also Maria.\ac{nom} trust.3\tsc{sg}\scsub{[dat]}.\\
+`I invite whoever Maria also trusts.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat-u}
+
 
 To summarize
 
@@ -209,7 +297,7 @@ To summarize
   \caption{Summary Modern German headless relatives}
   \begin{tabular}{c|c|c|c}
     \toprule
-   \textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
+   \textsubscript{\tsc{int}} \textsuperscript{\tsc{ext}}
           & [\ac{nom}]
           & [\ac{acc}]
           & [\ac{dat}]
@@ -233,16 +321,16 @@ To summarize
   \end{tabular}
 \end{table}
 
+In sum, Modern German has two requirements for case competition in its headless relatives. First, the relative pronoun surfaces in the more complex case, following the case scale. Second, the case competition can only be won by the internal case, not the external case.
 
 \section{No only external case wins}
 
+A third possibility logically exists. However, so the best of my knowledge, this pattern is not attested in any (past) natural language. It has been said about Greek, but I think this lanugage doesn't adhere to the case sacle. I give examples in the next section. It has also been said about Old Greek, and that could be the case, but I don't have the data. More research :)
+
+It is of course impossible to prove the non-existence of anything, so it could be an accident, but I am going to set up an system in which this does not exist.
 
 
 \section{Patterns without case competition}
-
-Old English, Old Icelandic both show: \tsc{d}-pronoun plus invariant relativizer + always take case from the main clause
-
-Greek
 
 Ancient Greek also actually has both directions (see \cite{vanriemsdijk2006}), so there is actually not a language with external only + hierarchy effects
 
